# autopad

./: .gitignore  README.md  pyproject.toml
autopad/: config.py  main.py
autopad/api/: posts.py
autopad/uia/: notepad.py
autopad/utils/: helpers.py  logger.py
autopad/vision/: find.py
