[project]
name = "autopad"
version = "0.1.0"
description = "An automation tool for notepad"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mss>=10.1.0",
    "numpy>=2.4.1",
    "opencv-python-headless>=4.13.0.90",
    "pyautogui>=0.9.54",
    "pywinauto>=0.6.9",
    "requests>=2.32.5",
]

